fix gapless bug

--- a/src/general/grid/row/row.scss
+++ b/src/general/grid/row/row.scss
@@ -38,10 +38,9 @@ $columns: (
   }
 
   &--gapless {
-    margin: 0;
+    margin: 0 !important;
 
     & > .osg-row__column {
-      margin: 0;
       padding: 0 !important;
     }
   }
